--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
 <head>
 
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="sass/main.css">
+	<script src="https://kit.fontawesome.com/ae7ac542c7.js"></script>
 
 	<title>Title</title>
 	<meta name="description" content="">
@@ -15,17 +17,109 @@
 
 <body>
 
-	<header class="main-header grid">
+<header class="main-header">
+	<div class="social-network">
+		<i class="fab fa-google social-network__icon social-network__icon "></i>
+		<i class="fab fa-twitter social-network__icon social-network__icon"></i>
+		<i class="fab fa-facebook-f social-network__icon social-network__icon"></i>
+
+	</div>
+	<div class="white-block"></div>
+
+	<div class="navbar">
+		<img src="img/olarm_logo.png" alt="" class="navbar__logo">
+		<ul class="navbar__menu">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="#">Features</a></li>
+			<li><a href="#">Plans</a></li>
+			<li><a href="#">Meet olarm</a></li>
+		</ul>
+		<div class="auth">
+			<button class="auth__btn">Sign Up</button>
+			<button class="auth__btn">Sign in</button>
+		</div>
+	</div>
+	<div class="header-content">
+
+		<div class="header-content__title">World's <span class="header-content__title--color">Smartest</span> Home
+			Security
+		</div>
+		<div class="header-content__text">Unique security experiences with more than 300,000 clients,
+			Simple Installation ,Convenience & Free Monitoring
+		</div>
+		<button class="header-content__btn">Visit Shop <i class="fas fa-long-arrow-alt-right move"></i></button>
 
 
-sad
-	</header>
+	</div>
+	<div class="header-bottom">
+		<div class="header-bottom__item">
+			<div class="sub-text">How Many Homes</div>
+			<div class="main-text">Number of Homes</div>
+		</div>
+		<div class="header-bottom__item">
+			<div class="sub-text">Choose Plan</div>
+			<div class="main-text">Professional Plan</div>
+		</div>
+		<div class="header-bottom__item">
+			<div class="sub-text sub-text--uppercase">CHeck Out</div>
+			<div class="main-text">Payment & Shipment</div>
+		</div>
+		<button class="header-bottom__btn">
+			<span class="btn-text">Quick Start  </span>
+			<span class="btn-icon"><i class="fas fa-long-arrow-alt-right move"> </i></span>
+		</button>
+	</div>
 
 
+</header>
+
+<section class="home-protection">
+	<div class="heading">
+		<div class="heading__text">Tailored Total Home Protection</div>
+	</div>
+	<h1 class="heading__title">Next Generation Home Alarm System</h1>
+	<div class="gallery">
+		<div class="gallery-item ">
+			<div class="play-btn">
+				<img src="img/Сгруппировать%201456.png" alt="">
+			</div>
+
+			<div class="gallery-item__main-text">Auto Arming | Dis-Arming</div>
+			<div class="gallery-item__sub-text">Watch Now</div>
+		</div>
+		<div class="gallery-item ">
+			<div class="play-btn">
+				<img src="img/Сгруппировать%201456.png" alt="" >
+			</div>
+
+			<div class="gallery-item__main-text">Iasy Installation</div>
+			<div class="gallery-item__sub-text">Watch Now</div>
+		</div>
+		<div class="gallery-item ">
+			<div class="play-btn">
+				<img src="img/Сгруппировать%201456.png" alt="">
+			</div>
+
+			<div class="gallery-item__main-text">24-7 Monitoring</div>
+			<div class="gallery-item__sub-text">Watch Now</div>
+		</div>
+		<div class="gallery-item ">
+			<div class="play-btn">
+				<img src="img/Сгруппировать%201456.png" alt="" >
+			</div>
+
+			<div class="gallery-item__main-text">Our Sensor Leams Your Lifestyle</div>
+			<div class="gallery-item__sub-text">Watch Now</div>
+		</div>
+	</div>
+</section>
+
+<section class="num2">
+
+</section>
 
 
-
-	<link rel="stylesheet" href="css/main.min.css">
-	<script src="js/scripts.min.js"></script>
+<link rel="stylesheet" href="css/main.min.css">
+<script src="js/scripts.min.js"></script>
 </body>
 </html>
